--- a/app/views/lmp-delivery-note.html
+++ b/app/views/lmp-delivery-note.html
@@ -55,7 +55,7 @@
       <div class="panel-heading">
         <div class="row">
           <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="form-group" ng-class="{ 'has-error' : !deliveryNote.catererStationId && deliveryNote.deliveryDate && displayError, 'has-success' : deliveryNote.catererStationId }">
+            <div class="form-group" ng-class="{ 'has-error' : !deliveryNote.catererStationId && displayError, 'has-success' : deliveryNote.catererStationId }">
               <label for="lmp-station">LMP Station*</label>
               <select class="form-control"
                       name="LMP Station"
@@ -236,8 +236,8 @@
             </div>
 
             <div class="col-xs-12 col-sm-6 col-md-3">
-              <div class="form-group" ng-class="formErrorClass('ullage-reason-' + item.masterItemId)">
-                <label>Ullage Reason<span ng-show="item.ullageQuantity">*</span></label>
+              <div class="form-group" ng-class="{ 'has-error' : !item.ullageReason && item.ullageQuantity && displayError, 'has-success' : item.ullageReason}">
+                <label>Ullage Reason <span ng-show="item.ullageQuantity">*</span></label>
                 <select class="form-control"
                         ng-model="item.ullageReason"
                         name="Ullage Reason ( {{ item.itemCode }} - {{ item.itemName }} )"
