--- a/app/views/queue.html
+++ b/app/views/queue.html
@@ -1,15 +1,37 @@
 <style>
-div.tooltip-inner {
-    min-width: 100px;
-    max-width: 100%; 
-}
-div.container.tooltip.top  {
-    left: 150px !important;
+.param-header .hidden-xs {
+  display: inline-flex !important;
+  font-weight: bold;
+  color: #0088cc !important;
+  font-size: 13px !important;
+  padding: 5px !important;
 }
 
-div.container.tooltip ul li {
-    text-align: left;
+.param-header > li {
+	margin-left : 5px!important;
 }
+
+.report-param-tooltip-button {
+	font-size:15px!important;
+	color:#5bc0de!important;
+	border:none!important;
+	background:none!important
+}
+
+.tooltip > .tooltip-inner {
+  border: 1.5px solid #ddd;
+  max-width: 320px;
+  color: black;
+  text-align: left;
+  background-color: white;
+  background: white;
+  padding-bottom: 5px !important;
+  opacity: 1.0;
+  filter: alpha(opacity=100);
+} 
+   
+.tooltip > .tooltip-arrow { border-bottom-color:black; }
+.tooltip.in{opacity:1!important;}
 </style>
 <!-- /Container  Starts -->
 <div class="container">
@@ -29,9 +51,10 @@ div.container.tooltip ul li {
        </tr>
      </thead>
      <tbody>
-       <tr ng-repeat="job in jobs track by job.id" ng-if="isTemplateInFeaturesInRole(job.template)"
-       tooltip-special="{{ requestParamTooltip(job.requestedParams) }}" tooltip-placement="top">
-         <th>{{job.name}}</th>
+       <tr ng-repeat="job in jobs track by job.id" ng-if="isTemplateInFeaturesInRole(job.template)">
+         <th>
+         	<button type="button" class="fa fa-info-circle tooltip-focus report-param-tooltip-button"  tooltip-special="{{ requestParamTooltip(job.requestedParams) }}" tooltip-placement="bottom"></button> 
+         {{job.name}}</th>
          <th>{{job.status}}</th>
          <th>{{job.id}}</th>
          <th>{{job.created | date : 'medium'}}</th>
