--- a/app/views/excise-duty-relationship-list.html
+++ b/app/views/excise-duty-relationship-list.html
@@ -113,8 +113,7 @@
                        ng-pattern="regexp.sixNumberWithTwoDecimal"
                        maxlength="7"
                        class="form-control"
-                       name="alcoholVolume"
-                       ng-required="shouldRequireCreateFields()"/>
+                       name="alcoholVolume"/>
               </div>
             </div>
           </div>
