--- a/app/views/receipt-rules-create.html
+++ b/app/views/receipt-rules-create.html
@@ -29,7 +29,7 @@
       <div class="panel-body">
         <div class="row">
           <div class="col-xs-12 col-sm-6">
-            <div class="form-group">
+            <div class="form-group" ng-class="{'has-error' : !receiptRule.countryId && displayError , 'has-success' : receiptRule.countryId}">
               <label for="country-id">Country *</label>
               <select class="form-control"
                       name="countryId"
@@ -47,9 +47,9 @@
           </div>
 
           <div class="col-xs-12 col-sm-6">
-            <div class="form-group">
+            <div class="form-group" ng-class="{'has-error' : (!multiSelectedValues.globalStationList || multiSelectedValues.globalStationList && multiSelectedValues.globalStationList.length ===0)&& displayError , 'has-success' : multiSelectedValues.globalStationList}">
                 <label for="globalStationList">Station *</label>
-          	     <ui-select id="globalStationList" multiple ng-model="multiSelectedValues.globalStationList"  theme="bootstrap" name="globalStationList"ng-disabled="readOnly" >
+          	     <ui-select id="globalStationList" multiple ng-model="multiSelectedValues.globalStationList"  theme="bootstrap" name="Station" ng-disabled="readOnly" on-select="onSelected()">
 	               <ui-select-match placeholder="Select Stations..">{{ $item.code }}</ui-select-match>
 	               <ui-select-choices  
 	               					  repeat="station in globalStationList | filter: $select.search | orderBy: 'station.name'">
@@ -61,32 +61,43 @@
       </div>
       <div class="row">
           <div class="col-xs-12 col-sm-6">
-            <div class="form-group">
+            <div class="form-group" ng-if="!receiptRule.autoPrint && displayError" ng-class="{'has-error' : !receiptRule.autoPrint && displayError , 'has-success' : receiptRule.autoPrint}" style="border:1px solid #a94442">
               <label for="auto-print">Print Auto-Receipt For*</label>
               <div  class="input-group">
-                <input type="radio" name="autoPrint" value="All" ng-disabled="readOnly" ng-model="receiptRule.autoPrint" ng-selected="receiptRule.autoPrint === 'All' " ng-required=true > All Items
+                <input type="radio" name="autoPrint" value="All" ng-disabled="readOnly" ng-model="receiptRule.autoPrint" ng-selected="receiptRule.autoPrint === 'All' " ng-required=true> All Items
               </div>
               <div>
                 <input type="radio" name="autoPrint" value="Item" ng-disabled="readOnly" ng-model="receiptRule.autoPrint" ng-selected="receiptRule.autoPrint === 'Item' "> Specific Retail Items ('Print Receipt' flagged in the item setup screen)
               </div>  
-                 
+            </div>
+            <div class="form-group" ng-if="receiptRule.autoPrint || !displayError">
+              <label for="auto-print">Print Auto-Receipt For*</label>
+              <div  class="input-group">
+                <input type="radio" name="autoPrint" value="All" ng-disabled="readOnly" ng-model="receiptRule.autoPrint" ng-selected="receiptRule.autoPrint === 'All' " ng-required=true> All Items
+              </div>
+              <div>
+                <input type="radio" name="autoPrint" value="Item" ng-disabled="readOnly" ng-model="receiptRule.autoPrint" ng-selected="receiptRule.autoPrint === 'Item' "> Specific Retail Items ('Print Receipt' flagged in the item setup screen)
+              </div>  
             </div>
           </div>
+          
           <div class="col-xs-12 col-sm-6">
             <div class="form-group">
               <label for="receipt-rule-limit">Receipt Floor Limit Value*</label>
-              <div class="row" ng-repeat="receiptFloorLimitAmountData in receiptFloorLimitAmountsUi track by $index | orderBy: 'receiptFloorLimitAmountData.code'">
+              <div class="row" ng-repeat="receiptFloorLimitAmountData in receiptFloorLimitAmountsUi track by $index | orderBy: 'receiptFloorLimitAmountData.code'" ng-class="{'has-error' : !receiptFloorLimitAmountData.amount && displayError , 'has-success' : receiptFloorLimitAmountData.amount}">
               <div class="col-xs-2 col-sm-1 text-right">{{ receiptFloorLimitAmountData.code }}</div>
               <div class="col-xs-10 col-sm-8">
                 <div class="input-group">
                   <span class="input-group-addon"><i class="fa fa-money"></i></span>
-                  <input type="text" class="form-control"
+                  <input type="text" 
+                         class="form-control"
                          name="receiptFloorLimitAmountData{{ receiptFloorLimitAmountData.code }}"
-                         custom-validity
-                         custom-pattern="numberOrDecimal"
+                         ng-pattern="regexp.sixNumberWithTwoDecimal"
+                         maxlength="9" 
                          ng-model="receiptFloorLimitAmountData.amount"
                          ng-disabled="readOnly || isDisabled"
-                         required>
+                         placeholder="1.00"
+                         required/>
                 </div>
               </div>
           </div>
