--- a/app/views/promotions.html
+++ b/app/views/promotions.html
@@ -445,10 +445,24 @@
       </div>
     </div>
 
-    <h3 id="promotion-inclusion-filter">Inclusion Filter <a class="pull-right"
-                                                            ng-click="addBlankObjectToArray(promotion.filters)"
-                                                            ng-hide="readOnly || isDisabled"
-                                                            ng-disabled="readOnly || isDisabled">Add Promotion Inclusion Filter</a></h3>
+    <h3 id="discount-inclusion-filter">
+      Inclusion Filter
+
+      <span class="pull-right">
+          <a ng-click="addBlankObjectToArray(promotion.filters)"
+             ng-hide="readOnly || isDisabled"
+             ng-disabled="readOnly || isDisabled">Per Station</a>
+        </span>
+      <span class="pull-right" style="margin-right:5px">
+          <a ng-click="showInclusionFilterByCountryModal()"
+             ng-hide="readOnly || isDisabled"
+             ng-disabled="readOnly || isDisabled">Per Country</a>
+        </span>
+
+      <span class="pull-right" style="margin-right:5px" ng-hide="readOnly || isDisabled">Add Promotion Inclusion Filter: </span>
+
+    </h3>
+
     <div class="row" ng-repeat="inclusionFilterData in promotion.filters">
       <div class="col-xs-10 col-sm-5">
         <div class="form-group">
@@ -486,6 +500,50 @@
       </div>
     </div>
   </form>
+</div>
+
+<div class="modal" id="inclusion-filter-countries-modal" data-keyboard="false">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <div class="row">
+          <div class="col-xs-8">
+            <h4 class="modal-title">Select countries</h4>
+          </div>
+        </div>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="col-xs-6">
+              <div class="form-group">
+                <label>Departure</label>
+                <select required name="departureCountry" class="form-control"
+                        ng-options="country.id as country.name for country in countryList | orderBy: 'name'"
+                        ng-model="countryInclusionFilterSelections.departure">
+                  <option value="">Please select</option>
+                </select>
+              </div>
+            </div>
+            <div class="col-xs-6">
+              <div class="form-group">
+                <label>Arrival</label>
+                <select required name="arrivalCountry" class="form-control"
+                        ng-options="country.id as country.name for country in countryList | orderBy: 'name'"
+                        ng-model="countryInclusionFilterSelections.arrival">
+                  <option value="">Please select</option>
+                </select>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-default btn-cancel" data-dismiss="modal">Close</button>
+          <button class="btn btn-success" ng-click="addSelectedCountriesForInclusionFilter()">Add</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <!-- /Container -->
