REPO-448 | Report Param header change

--- a/app/views/queue.html
+++ b/app/views/queue.html
@@ -2,7 +2,7 @@
 .param-header .hidden-xs {
   display: inline-flex !important;
   font-weight: bold;
-  color: #0088cc !important;
+  color: #5bc0de!important;
   font-size: 13px !important;
   padding: 5px !important;
 }
