TSVPORTAL-12134 - Fixed editable field

--- a/app/views/discount-create.html
+++ b/app/views/discount-create.html
@@ -162,11 +162,11 @@
           <div class="form-group">
             <div class="radio">
               <label>
-                <input type="radio" value="1" ng-model="formData.limitByShopDiscountType" />Item
+                <input ng-disabled="isDisabled()" type="radio" value="1" ng-model="formData.limitByShopDiscountType" />Item
               </label>
               &nbsp;&nbsp;
               <label>
-                <input type="radio" value="2" ng-model="formData.limitByShopDiscountType" />Discount
+                <input ng-disabled="isDisabled()" type="radio" value="2" ng-model="formData.limitByShopDiscountType" />Discount
               </label>
             </div>
           </div>
@@ -237,11 +237,11 @@
           <div class="form-group">
             <div class="radio">
               <label>
-                <input type="radio" value="1" ng-model="formData.limitByTransactionDiscountType" />Item
+                <input ng-disabled="isDisabled()" type="radio" value="1" ng-model="formData.limitByTransactionDiscountType" />Item
               </label>
               &nbsp;&nbsp;
               <label>
-                <input type="radio" value="2" ng-model="formData.limitByTransactionDiscountType" />Discount
+                <input ng-disabled="isDisabled()" type="radio" value="2" ng-model="formData.limitByTransactionDiscountType" />Discount
               </label>
             </div>
           </div>
@@ -312,11 +312,11 @@
           <div class="form-group">
             <div class="radio">
               <label>
-                <input type="radio" value="1" ng-model="formData.limitBySeatDiscountType" />Item
+                <input ng-disabled="isDisabled()" type="radio" value="1" ng-model="formData.limitBySeatDiscountType" />Item
               </label>
               &nbsp;&nbsp;
               <label>
-                <input type="radio" value="2" ng-model="formData.limitBySeatDiscountType" />Discount
+                <input ng-disabled="isDisabled()" type="radio" value="2" ng-model="formData.limitBySeatDiscountType" />Discount
               </label>
             </div>
           </div>
