--- a/app/views/lmp-delivery-note.html
+++ b/app/views/lmp-delivery-note.html
@@ -55,7 +55,7 @@
       <div class="panel-heading">
         <div class="row">
           <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="form-group" ng-class="{ 'has-error' : !deliveryNote.catererStationId && deliveryNote.deliveryDate && displayError, 'has-success' : deliveryNote.catererStationId }">
+            <div class="form-group" ng-class="{ 'has-error' : !deliveryNote.catererStationId && displayError, 'has-success' : deliveryNote.catererStationId }">
               <label for="lmp-station">LMP Station*</label>
               <select class="form-control"
                       name="LMP Station"
@@ -67,7 +67,6 @@
                 <option selected="selected" value disabled>Select Catering Station</option>
               </select>
             </div>
-
             <div class="row" ng-if="catererStationListIsEmpty && isDeliveryDateSelected()" style="padding-left: 20px;">
                 <span class="alert alert-warning" ><i class="fa fa-exclamation-triangle"></i> There are no active LMP stations for selected Delivery Date</span>
             </div>
@@ -210,17 +209,19 @@
                 <label>Expected</label>
                 <input ng-model="item.expectedQuantity" type="number" min="0" step="1" class="form-control"
                        id="expected-qty-{{ item.masterItemId }}"
+                       onkeypress="return event.charCode >= 48 && event.charCode <= 57"
                        ng-readonly="readOnly">
               </div>
             </div>
 
             <div class="col-xs-6 col-sm-3 col-md-1">
-              <div class="form-group">
+              <div class="form-group"  ng-class="{ 'has-error' : !isNumberGreaterThanOrEqualToZero(item.deliveredQuantity) && (isNumberGreaterThanZero(item.expectedQuantity) || isNumberGreaterThanZero(item.ullageQuantity))&& displayError, 'has-success' : isNumberGreaterThanOrEqualToZero(item.deliveredQuantity)}">
                 <label>Delivered*</label>
                 <input ng-model="item.deliveredQuantity" type="number" min="0" step="1" class="form-control"
                        id="delivered-qty-{{ item.masterItemId }}"
                        ng-readonly="readOnly" 
-                       ng-required="item.expectedQuantity"
+                       onkeypress="return event.charCode >= 48 && event.charCode <= 57"
+                       ng-required="isNumberGreaterThanZero(item.expectedQuantity) || isNumberGreaterThanZero(item.ullageQuantity)"
                        name="Delivered ( {{ item.itemCode }} - {{ item.itemName }} )">
               </div>
             </div>
@@ -230,14 +231,15 @@
                 <label>Ullage</label>
                 <input ng-model="item.ullageQuantity" type="number" min="0" step="1" class="form-control"
                        id="ullage-qty-{{ item.masterItemId }}" ng-readonly="readOnly"
+                       onkeypress="return event.charCode >= 48 && event.charCode <= 57"
                        ng-disabled="!item.deliveredQuantity"
                        ng-change="ullageQuantityChanged(item)">
               </div>
             </div>
 
             <div class="col-xs-12 col-sm-6 col-md-3">
-              <div class="form-group" ng-class="formErrorClass('ullage-reason-' + item.masterItemId)">
-                <label>Ullage Reason<span ng-show="item.ullageQuantity">*</span></label>
+              <div class="form-group" ng-class="{ 'has-error' : !item.ullageReason && item.ullageQuantity && displayError, 'has-success' : item.ullageReason}">
+                <label>Ullage Reason <span ng-show="item.ullageQuantity">*</span></label>
                 <select class="form-control"
                         ng-model="item.ullageReason"
                         name="Ullage Reason ( {{ item.itemCode }} - {{ item.itemName }} )"
