--- a/app/views/discount-create.html
+++ b/app/views/discount-create.html
@@ -366,7 +366,7 @@
         <div class="col-xs-12 col-sm-12">
           <div class="form-group" ng-class="validation.fieldCssClass(form, 'restrictedCategories')">
             <label>Item Categories *</label>
-            <ui-select multiple ng-model="formData.restrictedCategories" name="restrictedCategories" theme="bootstrap" ng-disabled="isDisabled()" required="showAddRestrictionSection()">
+            <ui-select multiple ng-model="formData.restrictedCategories" name="restrictedCategories" theme="bootstrap" ng-disabled="isDisabled()">
               <ui-select-match placeholder="Select categories...">{{$item.name}}</ui-select-match>
               <ui-select-choices repeat="category in salesCategoriesList | filter: $select.search">
                 <div ng-bind-html="category.name | highlight: $select.search"></div>
@@ -393,7 +393,7 @@
             <select name="restrictedItem-{{$index + 1}}" class="form-control"
                     ng-options="retailItem.id as retailItem.itemName for retailItem in filteredRetailItemsList[restrictedItem.itemCategory]"
                     ng-model="restrictedItem.id"
-                    ng-disabled="isDisabled()" required>
+                    ng-disabled="isDisabled()">
               <option value="">Please select</option>
             </select>
           </div>
