--- a/app/views/excise-duty-relationship-list.html
+++ b/app/views/excise-duty-relationship-list.html
@@ -17,8 +17,7 @@
       </div>
     </div>
 
-    <error-dialog form-object="itemExciseDutyCreateForm" error-response="errorResponse" display="displayError">
-    </error-dialog>
+    <error-dialog form-object="itemExciseDutyCreateForm" error-response="errorResponse" display="displayError"></error-dialog>
     <error-dialog error-response="errorResponseEdit" display="displayEditError"></error-dialog>
 
     <form name="itemExciseDutyCreateForm">
